--- a/.github/workflows/migrate-database.yaml
+++ b/.github/workflows/migrate-database.yaml
@@ -128,16 +128,9 @@ jobs:
         name: Setup tunnel to connect to RDS
         run: ./workflow-utils/rds-tunnel.sh ${{ matrix.environment-type }} default ${{ secrets.AWS_REGION }} 5432 READER
 
-      - id: cd-migrations-folder
-        name: Move to migrations folder
-        run: cd ./migrations/sql-migrations
-
-      - id: echo-pwd
-        name: Move to migrations folder
-        run: pwd
-
       - id: install
         name: Install dependencies
+        working-directory: ./migrations/sql-migrations
         run: |-
           echo "Running CI with "
           echo "Node version: $(node --version)"
@@ -148,6 +141,7 @@ jobs:
 
       - id: run-migration
         name: Run database migration
+        working-directory: ./migrations/sql-migrations
         run: NODE_ENV=${{ matrix.environment-type }} SANDBOX_ID=default knex migrate:latest
 
   report-if-failed:
