--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -517,6 +517,8 @@ jobs:
         name: Install Flux to EKS cluster
         run: |-
 
+          # Refer to https://github.com/fluxcd/flux2/releases
+          FLUX_VERSION=v0.40.1
           FLUX_REPO=releases
           FLUX_PATH=deployments/$ENVIRONMENT_NAME-$CLUSTER_ENV
           REPO_FULL_PATH=$GITHUB_REPOSITORY_OWNER/$FLUX_REPO
@@ -525,6 +527,7 @@ jobs:
           echo "flux-path=$(echo $FLUX_PATH)" >> $GITHUB_ENV
 
           args=(
+            --version $FLUX_VERSION
             --owner $GITHUB_REPOSITORY_OWNER
             --repository $FLUX_REPO
             --branch master
