--- a/cf/delete-s3-file-lambda.yaml
+++ b/cf/delete-s3-file-lambda.yaml
@@ -123,7 +123,7 @@ Resources:
             const { key, bucketName } = event;
             const realBucketName = `${bucketName}-${process.env.CLUSTER_ENV}-${process.env.AWS_ACCOUNT_ID}`;
 
-            deleteS3Files(key, realBucketName);
+            await deleteS3Files(key, realBucketName);
 
             callback(null, event);
           };
