Remove unused variable

--- a/cf/delete-s3-file-lambda.yaml
+++ b/cf/delete-s3-file-lambda.yaml
@@ -110,7 +110,7 @@ Resources:
 
               items.map(items => console.log(`== Deleting ${items.Key} from ${bucketName} ==`));
               await s3Client.deleteObjects(deleteObjectParams).promise();
-              console.log(`== Successfully deleted files from ${bucketName}==`, data);
+              console.log(`== Successfully deleted files from ${bucketName}==`);
             } catch (err) {
               console.log(err, err.stack);
             }
