--- a/.github/workflows/remove-staging.yaml
+++ b/.github/workflows/remove-staging.yaml
@@ -137,6 +137,9 @@ jobs:
 
           BASE_NAME=biomage-cognito-staging-$SANDBOX_ID
           echo "::set-output name=cognito-name::$BASE_NAME"
+
+          BASE_NAME=biomage-batch-job-definition-staging-$SANDBOX_ID
+          echo "::set-output name=batch-job-definition-name::$BASE_NAME"
         env:
           SANDBOX_ID: ${{ github.event.inputs.sandbox-id }}
 
@@ -160,6 +163,13 @@ jobs:
           aws cloudformation delete-stack --stack-name $STACK_NAME
         env:
           STACK_NAME: ${{ steps.set-name.outputs.cognito-name }}
+
+      - id: remove-template-batch-job-definition
+        name: Remove CloudFormation stack for SNS topic
+        run: |-
+          aws cloudformation delete-stack --stack-name $STACK_NAME
+        env:
+          STACK_NAME: ${{ steps.set-name.outputs.batch-job-definition-name }}
 
       - id: delete-staging-manifest
         name: Remove manifest files from releases
