--- a/cf/irsa-flux-image-reflector-role.yaml
+++ b/cf/irsa-flux-image-reflector-role.yaml
@@ -18,7 +18,7 @@ Parameters:
   SandboxID:
     Type: String
     Default: default
-    Description: The sandbox ID of the environment that this topic is created for.
+    Description: The sandbox ID of the environment that this stack is created for.
 
 Resources:
   EventExporterRole:
