--- a/cf/batch.yaml
+++ b/cf/batch.yaml
@@ -30,13 +30,20 @@ Resources:
         DesiredvCpus: !If [isProduction, 4, 0]
         MaxvCpus: 128
         InstanceRole: !Sub "pipeline-instance-profile-${Environment}"
-        InstanceTypes:
+        InstanceTypes: !If [isProduction,
+          - r6i.xlarge
+          - r6i.2xlarge
+          - r6i.4xlarge
+          - r6i.8xlarge
+          - r6i.12xlarge
+          - r6i.16xlarge,
           - r6i.xlarge
           - r6i.2xlarge
           - r6i.4xlarge
           - r6i.8xlarge
           - r6i.12xlarge
           - r6i.16xlarge
+        ]
         SecurityGroupIds:
           - Fn::ImportValue: !Sub "eksctl-biomage-${Environment}-cluster::SecurityGroup"
         Subnets:
