--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -167,7 +167,7 @@ jobs:
           yq -i '
             .metadata.name = strenv(CLUSTER_NAME) |
             .metadata.region = strenv(AWS_REGION) |
-            .iam.serviceAccounts[1].metadata.roleName = strenv(LOAD_BALANCER_ROLE_NAME)
+            .metadata.roleName = strenv(LOAD_BALANCER_ROLE_NAME)
           ' infra/config/cluster/cluster-template.yaml
 
           export CUSTOM_CLUSTER_CONFIG="infra/config/cluster/${{ matrix.environment-name }}/custom-cluster-config.yaml"
