--- a/infra/config/cluster/cluster-template.yaml
+++ b/infra/config/cluster/cluster-template.yaml
@@ -26,6 +26,7 @@ iam:
     - metadata:
         name: aws-load-balancer-controller
         namespace: kube-system
+      wellKnownPolicies:
         roleName: filled-in-by-ci
 
 # if you add or remove items under managedNodeGroups, make sure you update customized cluster
