--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -320,8 +320,8 @@ jobs:
             helm repo update
             helm upgrade aws-load-balancer-controller eks/aws-load-balancer-controller \
               --namespace kube-system \
-              --set serviceAccount.create=true \
-              --set serviceAccount.name=aws-load-balancer-controller \
+              --set serviceAccount.create=false \
+              --set serviceAccount.name=kube-system/aws-load-balancer-controller \
               --set clusterName=biomage-$CLUSTER_ENV \
               --install --wait
 
