--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -159,7 +159,7 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - id: fill-metadata
-        name: Add name and region dependent params to the eksctl config.
+        name: Add name and region to the eksctl file.
         run: |-
           export CLUSTER_NAME="biomage-$CLUSTER_ENV"
 
@@ -323,7 +323,6 @@ jobs:
               --set serviceAccount.create=false \
               --set serviceAccount.name=aws-load-balancer-controller \
               --set clusterName=biomage-$CLUSTER_ENV \
-              --set iam.serviceAccounts[2].roleName = eksctl-$CLUSTER_ENV-load-balancer-controller-role" \
               --install --wait
 
       - id: platform-public-facing
