--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -65,9 +65,9 @@ jobs:
             echo "::add-mask::$DEPLOYMENT_AWS_SECRET_ACCESS_KEY"
             echo "::add-mask::$DEPLOYMENT_GITHUB_API_TOKEN"
 
-            echo "::set-output name=aws-access-key::$DEPLOYMENT_AWS_ACCESS_KEY_ID"
-            echo "::set-output name=aws-secret-access-key::$DEPLOYMENT_AWS_SECRET_ACCESS_KEY"
-            echo "::set-output name=github-api-token::$DEPLOYMENT_GITHUB_API_TOKEN"
+            echo "{aws-access-key}={$DEPLOYMENT_AWS_ACCESS_KEY_ID} >> $GITHUB_OUTPUT"
+            echo "{aws-secret-access-key}={$DEPLOYMENT_AWS_SECRET_ACCESS_KEY}  >> $GITHUB_OUTPUT"
+            echo "{github-api-token}={$DEPLOYMENT_GITHUB_API_TOKEN} >> $GITHUB_OUTPUT"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -106,16 +106,16 @@ jobs:
         name: Set name of the CloudFormation stacks
         run: |-
           BASE_NAME=biomage-rds-staging-$SANDBOX_ID
-          echo "::set-output name=rds-name::$BASE_NAME"
+          echo "{rds-name}={$BASE_NAME} >> $GITHUB_OUTPUT"
 
           BASE_NAME=biomage-sns-staging-$SANDBOX_ID
-          echo "::set-output name=sns-name::$BASE_NAME"
+          echo "{sns-name}={$BASE_NAME} >> $GITHUB_OUTPUT"
 
           BASE_NAME=biomage-cognito-staging-$SANDBOX_ID
-          echo "::set-output name=cognito-name::$BASE_NAME"
+          echo "{cognito-name}={$BASE_NAME} >> $GITHUB_OUTPUT"
 
           BASE_NAME=biomage-batch-job-definition-staging-$SANDBOX_ID
-          echo "::set-output name=batch-job-definition-name::$BASE_NAME"
+          echo "{batch-job-definition-name}={$BASE_NAME} >> $GITHUB_OUTPUT"
         env:
           SANDBOX_ID: ${{ github.event.inputs.sandbox-id }}
 
