--- a/.github/workflows/deploy-changed-cf.yaml
+++ b/.github/workflows/deploy-changed-cf.yaml
@@ -52,11 +52,11 @@ jobs:
           CLUSTER=${CLUSTER:-"staging"}
 
           if [ "${GITHUB_REF}" == "refs/heads/master" ] || [ "${CLUSTER}" = "staging and production" ]; then
-            echo "{matrix}={['staging', 'production']} >> $GITHUB_OUTPUT"
+            echo "{matrix}={['staging', 'production']}" >> $GITHUB_OUTPUT
           elif [ "${CLUSTER}" = "staging" ]; then
-            echo "{matrix}={['staging']} >> $GITHUB_OUTPUT"
+            echo "{matrix}={['staging']} >>" $GITHUB_OUTPUT
           elif [ "${CLUSTER}" = "production" ]; then
-            echo "{matrix}{['production']} >> $GITHUB_OUTPUT"
+            echo "{matrix}{['production']} >>" $GITHUB_OUTPUT
           fi
         env:
           CLUSTER: ${{ github.event.inputs.cluster }}
@@ -121,9 +121,9 @@ jobs:
           cat ${HOME}/cf_files.json
 
           # Set as output the minified JSON.
-          echo "{files}={$(jq -c . < ${HOME}/cf_files.json)} >> $GITHUB_OUTPUT"
+          echo "{files}={$(jq -c . < ${HOME}/cf_files.json)}" >> $GITHUB_OUTPUT
           echo "$(jq -c . < ${HOME}/cf_files.json)"
-          echo "{num-files}={$(jq '. | length' ${HOME}/cf_files.json)} >> $GITHUB_OUTPUT"
+          echo "{num-files}={$(jq '. | length' ${HOME}/cf_files.json)}" >> $GITHUB_OUTPUT
 
   lint-templates:
     name: Lint template files
@@ -183,10 +183,10 @@ jobs:
           BASE_NAME=$(basename $FILE_NAME | sed "s/\..*//")
           STACK_NAME=biomage-$BASE_NAME-$CLUSTER_ENV
 
-          echo "{stack-name}={$STACK_NAME} >> $GITHUB_OUTPUT"
+          echo "{stack-name}={$STACK_NAME}" >> $GITHUB_OUTPUT
 
           if [ "$BASE_NAME" == 'rds' ]; then
-            echo "{deploy-rds}={true} >> $GITHUB_OUTPUT"
+            echo "{deploy-rds}={true}" >> $GITHUB_OUTPUT
           fi
 
         env:
@@ -228,7 +228,7 @@ jobs:
         name: Get OIDC provider information for IRSA role
         run: |-
           OIDC_PROVIDER=$(aws eks describe-cluster --name "biomage-$CLUSTER_ENV" --query "cluster.identity.oidc.issuer" --output text | sed -e "s/^https:\/\///")
-          echo "${oidc-provider}={$OIDC_PROVIDER} >> $GITHUB_OUTPUT"
+          echo "${oidc-provider}={$OIDC_PROVIDER}" >> $GITHUB_OUTPUT
 
       - id: deploy-irsa-template
         if: ${{ contains(matrix.template, 'irsa-') }}
