temporary remove template parameter override

--- a/.github/workflows/deploy-changed-cf.yaml
+++ b/.github/workflows/deploy-changed-cf.yaml
@@ -205,7 +205,7 @@ jobs:
         if: ${{ !contains(matrix.template, 'irsa-') && matrix.template != 'cf/sns.yaml' }}
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
-          parameter-overrides: "Environment=${{ matrix.environment-type }}"
+        #   parameter-overrides: "Environment=${{ matrix.environment-type }}"
           name: ${{ steps.set-name.outputs.stack-name }}
           template: ${{ matrix.template }}
           no-fail-on-empty-changeset: "1"
