try use OIDC credentials

--- a/.github/workflows/deploy-changed-cf.yaml
+++ b/.github/workflows/deploy-changed-cf.yaml
@@ -170,10 +170,9 @@ jobs:
 
       - id: set-up-creds
         name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/iac-role-oidc
           aws-region: ${{ secrets.AWS_REGION }}
 
       - id: set-name
@@ -205,7 +204,7 @@ jobs:
         if: ${{ !contains(matrix.template, 'irsa-') && matrix.template != 'cf/sns.yaml' }}
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
-        #   parameter-overrides: "Environment=${{ matrix.environment-type }}"
+          parameter-overrides: "Environment=${{ matrix.environment-type }}"
           name: ${{ steps.set-name.outputs.stack-name }}
           template: ${{ matrix.template }}
           no-fail-on-empty-changeset: "1"
@@ -260,10 +259,9 @@ jobs:
     steps:
       - id: set-up-creds
         name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/iac-role-oidc
           aws-region: ${{ secrets.AWS_REGION }}
 
       # This step is needed to change the environment name (e.g. staging) into its uppercase form.
