--- a/.github/workflows/deploy-changed-cf.yaml
+++ b/.github/workflows/deploy-changed-cf.yaml
@@ -23,6 +23,10 @@ on:
       - 'cf/**.yaml'
       - 'cf/**.yml'
 
+permissions:
+    id-token: write
+    contents: read
+
 jobs:
   setup:
     name: Check secrets and set up matrix
