--- a/.github/workflows/backup-cognito-users.yaml
+++ b/.github/workflows/backup-cognito-users.yaml
@@ -42,6 +42,7 @@ jobs:
       - id: backup-users
         name: create backup json of cognito users
         run: |-
+            userPoolId=$(aws cognito-idp list-user-pools --max-results 20 | jq -c '.UserPools[] | select(.Name | test("biomage-user-pool-case-insensitive-production")) | .Id' | tr -d '"' )
             cbr backup --region ${{env.region}} --use-env-vars --pool ${userPoolId} --directory .
 
       - id: save-to-s3
