--- a/.github/workflows/remove-staging.yaml
+++ b/.github/workflows/remove-staging.yaml
@@ -12,6 +12,10 @@ on:
 env:
   region: ${{ secrets.AWS_REGION }}
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   remove-staging:
     name: Remove staging environment
@@ -20,10 +24,10 @@ jobs:
     steps:
       - id: setup-aws
         name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/ci-iac-role
+          role-duration-seconds: 7200
           aws-region: ${{ env.region }}
 
       - id: install-aws-cli
@@ -32,55 +36,12 @@ jobs:
         with:
           version: 2
 
-      - id: decrypt-secrets
-        name: Decrypt credentials from user.
-        run: |-
-            SECRETS="$(aws kms decrypt \
-              --key-id arn:aws:kms:${REGION}:${AWS_ACCOUNT_ID}:alias/iac-secret-key \
-              --ciphertext-blob fileb://<(echo $CIPHERTEXT | base64 --decode) \
-              --output text --query Plaintext)"
-
-            DEPLOYMENT_AWS_ACCESS_KEY_ID="$(echo $SECRETS | base64 --decode | jq -r '.access_key')"
-            DEPLOYMENT_AWS_SECRET_ACCESS_KEY="$(echo $SECRETS | base64 --decode | jq -r '.secret_key')"
-            DEPLOYMENT_GITHUB_API_TOKEN="$(echo $SECRETS | base64 --decode | jq -r '.github_api_token')"
-
-            echo "::add-mask::$SECRETS"
-
-            echo "::add-mask::$DEPLOYMENT_AWS_ACCESS_KEY_ID"
-            echo "::add-mask::$DEPLOYMENT_AWS_SECRET_ACCESS_KEY"
-            echo "::add-mask::$DEPLOYMENT_GITHUB_API_TOKEN"
-
-            echo "::set-output name=aws-access-key::$DEPLOYMENT_AWS_ACCESS_KEY_ID"
-            echo "::set-output name=aws-secret-access-key::$DEPLOYMENT_AWS_SECRET_ACCESS_KEY"
-            echo "::set-output name=github-api-token::$DEPLOYMENT_GITHUB_API_TOKEN"
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          CIPHERTEXT: ${{ github.event.inputs.secrets }}
-          REGION: ${{ env.region }}
-          AWS_ACCOUNT_ID: ${{ steps.setup-aws.outputs.aws-account-id }}
-
-      - id: setup-aws-submitted
-        name: Configure AWS credentials with submitted details
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ steps.decrypt-secrets.outputs.aws-access-key }}
-          aws-secret-access-key: ${{ steps.decrypt-secrets.outputs.aws-secret-access-key }}
-          aws-region: ${{ env.region }}
 
       - id: checkout
         name: Check out source code
         uses: actions/checkout@v2
         with:
           token: ${{ secrets.API_TOKEN_GITHUB }}
-
-      - id: setup-aws-privileged
-        name: Configure AWS privileged credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.region }}
 
       - id: install-eksctl
         name: Install eksctl
