--- a/.github/workflows/delete-unused-step-functions.yaml
+++ b/.github/workflows/delete-unused-step-functions.yaml
@@ -7,6 +7,10 @@ on:
 env:
   region: ${{ secrets.AWS_REGION }}
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   delete-unused-step-functions:
     name: Delete old step functions
@@ -18,10 +22,10 @@ jobs:
     steps:
       - id: setup-aws
         name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/ci-iac-role
+          role-duration-seconds: 7200
           aws-region: ${{ env.region }}
 
       # If the step functions list is too close to its limit,
