--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -244,7 +244,7 @@ jobs:
         if: ${{ failure() }}
         name: Add k8s config to enable removal of Fargate profile on failure
         run: |-
-            aws eks update-kubeconfig --name biomage-$CLUSTER_ENV --role-arn arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/ci-iac-role
+            aws eks update-kubeconfig --name biomage-$CLUSTER_ENV
 
       - id: cleanup-pipeline-fargate-profile-if-failure
         name: Remove Fargate profile for the pipelines
